# Izuma

./: CMakeLists.txt  README.md  environment
IzumaEditor/: CMakeLists.txt
IzumaEditor/src/: IzumaEditor.cpp
IzumaEngine/: CMakeLists.txt
IzumaEngine/src/: Izuma.h
IzumaEngine/src/Izuma/: Application.cpp  Application.h  EntryPoint.h  test.cpp
IzumaEngine/src/Izuma/Core/: Logger.h
IzumaEngine/src/Izuma/Core/Events/: Event.h  EventDispatcher.h
IzumaEngine/src/Izuma/Core/Input/: Input.h  Keycodes.h
IzumaEngine/src/Izuma/Core/Network/: Client.cpp  Client.h  Server.cpp  Server.h
IzumaEngine/src/Izuma/GraphicsContext/: Context.h  VulkanContext.h
IzumaEngine/src/Platform/: LinuxPlatform.cpp  LinuxPlatform.h  Platform.cpp  Platform.h  WindowsPlatform.cpp  WindowsPlatform.h
IzumaGame/: CMakeLists.txt
IzumaGame/src/: IzumaGame.cpp
bin-Win32/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake
bin-Win32/.cmake/api/v1/reply/: cache-v2-9ff3039caad1dbc80fa2.json  cmakeFiles-v1-748af8d1b1d712d0c130.json  codemodel-v2-4b0491d87b9cd8d592d6.json  directory-IzumaEditor-Debug-f5f54eede4004aae1351.json  directory-IzumaGame-Debug-267ff24b47c86dcea390.json  index-2023-12-29T03-50-24-0954.json  target-IzumaEditor-Debug-7bf7809683c5ceff6fa0.json  target-IzumaEngine-Debug-fe77570e731d273ed686.json  target-IzumaGame-Debug-06b72cafd3099884a48d.json  toolchains-v1-978bab89999cc105b084.json
bin-Win32/IzumaEditor/: Makefile  cmake_install.cmake
bin-Win32/IzumaEngine/: Makefile  cmake_install.cmake
bin-Win32/IzumaGame/: Makefile  cmake_install.cmake
bin-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
bin-debug/.cmake/api/v1/reply/: cache-v2-1d8c0bccfc1e872a3a04.json  (+6 more)
bin-debug/InazumaEditor/: cmake_install.cmake
bin-debug/InazumaEngine/: cmake_install.cmake
bin-debug/InazumaGame/: cmake_install.cmake
bin-debug/IzumaEditor/: cmake_install.cmake
bin-debug/IzumaEngine/: cmake_install.cmake
bin-debug/IzumaGame/: cmake_install.cmake
build-Windows/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Windows/IzumaEditor/: cmake_install.cmake
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-linux/IzumaEditor/: cmake_install.cmake
build-linux/IzumaEngine/: cmake_install.cmake
build-linux/IzumaGame/: cmake_install.cmake
(+15 files in other folders)
